[project]
name = "montreal-python-luigi-goes-brrr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "loguru>=0.7.2",
    "luigi>=3.5.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "ruff>=0.7.2",
    "scikit-learn>=1.5.2",
]
